; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp.c_necp_buffer_write_tlv.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp.c_necp_buffer_write_tlv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @necp_buffer_write_tlv(i32* %0, i32 %1, i32 %2, i8* %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i8* %3, i8** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* %10, align 4
  %18 = load i32*, i32** %12, align 8
  %19 = load i32, i32* %13, align 4
  %20 = call i32 @necp_buffer_write_tlv_validate(i32* %15, i32 %16, i32 %17, i32* %18, i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %6
  store i32* null, i32** %7, align 8
  br label %48

23:                                               ; preds = %6
  %24 = load i32*, i32** %8, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 4
  %26 = getelementptr inbounds i32, i32* %25, i64 4
  %27 = load i32, i32* %10, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32, i32* %26, i64 %28
  store i32* %29, i32** %14, align 8
  %30 = load i32, i32* %9, align 4
  %31 = load i32*, i32** %8, align 8
  store i32 %30, i32* %31, align 4
  %32 = load i32, i32* %10, align 4
  %33 = load i32*, i32** %8, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 4
  %35 = bitcast i32* %34 to i8*
  %36 = bitcast i8* %35 to i32*
  store i32 %32, i32* %36, align 4
  %37 = load i32, i32* %10, align 4
  %38 = icmp sgt i32 %37, 0
  br i1 %38, label %39, label %46

39:                                               ; preds = %23
  %40 = load i32*, i32** %8, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 4
  %42 = getelementptr inbounds i32, i32* %41, i64 4
  %43 = load i8*, i8** %11, align 8
  %44 = load i32, i32* %10, align 4
  %45 = call i32 @memcpy(i32* %42, i8* %43, i32 %44)
  br label %46

46:                                               ; preds = %39, %23
  %47 = load i32*, i32** %14, align 8
  store i32* %47, i32** %7, align 8
  br label %48

48:                                               ; preds = %46, %22
  %49 = load i32*, i32** %7, align 8
  ret i32* %49
}

declare dso_local i32 @necp_buffer_write_tlv_validate(i32*, i32, i32, i32*, i32) #1

declare dso_local i32 @memcpy(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
